--- a/src/app/components/marketplace/products-listing/products-listing.component.html
+++ b/src/app/components/marketplace/products-listing/products-listing.component.html
@@ -56,7 +56,7 @@
                             </button>
                         </div>
                         <div class="product-action-2-wrap">
-                            <button class="product-action-btn-2" title="Add To Cart"><i class="pe-7s-cart"></i> Add to cart</button>
+                            <button class="product-action-btn-2" (click)="onAddToCart(product)" title="Add To Cart"><i class="pe-7s-cart"></i> Add to cart</button>
                         </div>
                     </div>
                     <div class="product-content">
