--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,5 +1,9 @@
-<form action="">
-    <input type="text" placeholder="username">
-    <input type="password"  placeholder="password" name="" id="">
-    <button>Login</button>
-</form>
+<div class="row">
+    <div class="col-md-4 offset-md-4">
+        <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+            <input type="text" formControlName="username" class="form-control mb-2" placeholder="username">
+            <input type="password" formControlName="password" class="form-control mb-2" placeholder="password" name="" id="">
+            <button type="submit" [disabled]="loginForm?.invalid" class="btn btn-primary">Login</button>
+        </form>
+    </div>
+</div>
